# pijul

./: .gitignore  README.md  default.nix  shell.nix
libpijul/: Cargo.toml
libpijul/src/: apply.rs  backend.rs  conflict.rs  error.rs  file_operations.rs  fs_representation.rs  graph.rs  lib.rs  optimal_diff.rs  output.rs  patch.rs  record.rs  unrecord.rs
pijul/: Cargo.toml
pijul/src/: error.rs  main.rs  meta.rs
pijul/src/commands/: add.rs  apply.rs  ask.rs  blame.rs  branches.rs  changes.rs  checkout.rs  clone.rs  delete_branch.rs  diff.rs  dist.rs  fork.rs  fs_operation.rs  info.rs  init.rs  ls.rs  mod.rs  mv.rs  patch.rs  pull.rs  push.rs  record.rs  remote.rs  remove.rs  revert.rs  test.rs  unrecord.rs
pijul/tests/: pijul.bats  record.bats  run_tests.sh  test_helper.bash
