[package]
name = "pijul"
description = "A patch-based distributed version control system, easy to use and fast. Command-line interface."
version = "0.5.9"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "GPL-2.0+"
homepage = "https://pijul.org/"
repository = "https://nest.pijul.com/pijul_org/pijul"

include = [
  "Cargo.toml",
  "COPYING",
  "src/meta.rs",
  "src/error.rs",
  "src/commands/init.rs",
  "src/commands/test.rs",
  "src/commands/pull.rs",
  "src/commands/info.rs",
  "src/commands/changes.rs",
  "src/commands/ask.rs",
  "src/commands/mod.rs",
  "src/commands/remote.rs",
  "src/commands/record.rs",
  "src/commands/unrecord.rs",
  "src/commands/mv.rs",
  "src/commands/check.rs",
  "src/commands/escape.rs",
  "src/commands/add.rs",
  "src/commands/blame.rs",
  "src/commands/apply.rs",
  "src/commands/clone.rs",
  "src/commands/patch.rs",
  "src/commands/fs_operation.rs",
  "src/commands/revert.rs",
  "src/commands/fork.rs",
  "src/commands/ls.rs",
  "src/commands/checkout.rs",
  "src/commands/remove.rs",
  "src/commands/push.rs",
  "src/commands/delete_branch.rs",
  "src/commands/branches.rs",
  "src/commands/diff.rs",
  "src/commands/dist.rs",
  "src/main.rs"
]

[dependencies]
app_dirs = "1.1"
chrono = "0.3"
clap = "2.24"
env_logger = "0.4"
flate2 = "0.2"
futures = "0.1"
getch = "0.1"
hyper = { version = "0.10", default-features = false }
hyper-rustls = "0.4"
libpijul = { path = "../libpijul" }
log = "0.3"
rand = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
rustyline = "1.0"
serde = "1.0"
serde_derive = "1.0"
shell-escape = "0.1"
tar = "0.4"
term = "0.4"
thrussh = "0.10"
tokio-core = "0.1"
toml = "0.4"
user = "0.1"

[dev-dependencies]
tempdir = "0.3"
walkdir = "1.0.7"
